--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
             <div class="copyright">
                 <p>
                     Copyright &copy; 1996-2024
-                    <a href="#"> BOKYUNG-Lego</a>
+                    <a>BOKYUNG-Lego</a>
                     All Rights Reserved.
                 </p>
             </div>
